// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel should match snapshot with mixed cls, hidden-scrollbar and arrow buttons 1`] = `
<div
  class="carousel mixed-class"
>
  <lego-components_button
    classname="switch-arrow-button switch-arrow-button_left switch-arrow-button_theme_light switch-arrow-button_hidden"
    size="s"
    view="clear"
  />
  <lego-components_button
    classname="switch-arrow-button switch-arrow-button_right switch-arrow-button_theme_light switch-arrow-button_hidden"
    size="s"
    view="clear"
  />
  <div
    class="carousel__scroller carousel__scroller_hidden-scrollbar"
  />
</div>
`;

exports[`Carousel should match snapshot with non-hidden-scrollbar 1`] = `
<div
  class="carousel"
>
  <lego-components_button
    classname="switch-arrow-button switch-arrow-button_left switch-arrow-button_theme_light switch-arrow-button_hidden"
    size="s"
    view="clear"
  />
  <lego-components_button
    classname="switch-arrow-button switch-arrow-button_right switch-arrow-button_theme_light switch-arrow-button_hidden"
    size="s"
    view="clear"
  />
  <div
    class="carousel__scroller"
  />
</div>
`;
